# lua_cpp

./: .gitignore  AGGRESSIVE_MACRO_ELIMINATION_PLAN.md  CAST_REDUCTION_ANALYSIS.md  CLAUDE.md  CMAKE_BUILD.md  CMakeLists.txt  CONSTRUCTOR_PLAN.md  CONVERSION_MILESTONE.md  COVERAGE_ANALYSIS.md  CPP_STDLIB_OPPORTUNITIES.md  CUSTOM_ALLOCATOR_PLAN.md  ENUM_CONVERSION_PLAN.md  GC_PITFALLS_ANALYSIS.md  GC_REMOVAL_OWNERSHIP_PLAN.md  GC_REMOVAL_PLAN.md  GC_SIMPLIFICATION_ANALYSIS.md  LUAALLOCATOR_README.md  LUASTACK_ASSIGNMENT_PLAN.md  README.md  REFACTORING_SUMMARY.md  S2V_REMOVAL_ANALYSIS.md  TVALUE_VARIANT_REPLACEMENT_PLAN.md  UNION_REMOVAL_ANALYSIS.md  claude.md  continue.txt  lapi.cpp  ldebug.cpp  ldo.cpp  ldo.h  lfunc.cpp  lfunc.h  lgc.cpp  lgc.h  llex.cpp  llex.h  llimits.h  lmem.h  lobject.h  lparser.cpp  lparser.h  (+16 more)
.github/workflows/: ci.yml  coverage.yml  static-analysis.yml
build_clang/: CMakeCache.txt
cmake/: LuaConfig.cmake.in
docs/: AGGRESSIVE_MACRO_ELIMINATION_PLAN.md  CONSTRUCTOR_PLAN.md  CONSTRUCTOR_REFACTOR_PLAN.md  CPP_MODERNIZATION_ANALYSIS.md  ENCAPSULATION_PLAN.md  GC_MINIMIZATION_PLAN.md  HEADER_ORGANIZATION_ANALYSIS.md  HISTORY.md  IDENTIFIER_MODERNIZATION_PLAN.md  INIT_TO_CONSTRUCTOR_ANALYSIS.md  LOOP_OPTIMIZATION_ANALYSIS.md  LTO_STATUS.md  LUASTACK_AGGRESSIVE_PLAN.md  LUASTACK_ASSIGNMENT_PLAN.md  MEMORY_ALLOCATION_ARCHITECTURE.md  NECESSARY_MACROS.md  NEXT_TASKS_RECOMMENDATIONS.md  PHASE_115_SUMMARY.md  PHASE_130_POINTER_TO_REFERENCE.md  PHASE_148_DECLARE_ON_FIRST_USE_PLAN.md  PHASE_36_2_PLAN.md  PHASE_SUGGESTIONS.md  ROADMAP_2025_11_21.md  SPAN_MODERNIZATION_PLAN.md  SRP_ANALYSIS.md  STATIC_FUNCTION_ELIMINATION_PLAN.md  STATUS_UPDATE_2025_11_21.md  STRICT_ALIASING_AUDIT.md  TYPE_MODERNIZATION_ANALYSIS.md  claude.md  lambda_performance_analysis.md  lvm_analysis_suggestions.md  lvm_implementation_plan.md  lvm_remaining_macros.md  lvm_updated_analysis_2025-11-17.md  phase2_experiment_results.md  phase2_macro_analysis.md
docs/architecture/: GC_ARCHITECTURE.md  MEMORY_MODERNIZATION_ANALYSIS.md
docs/phases/: PHASE_135_FAILED_ATTEMPT.md  PHASE_138_139_SUMMARY.md
docs/planning/: IDENTIFIER_MODERNIZATION_PLAN.md
docs/reference/: UNDEFINED_BEHAVIOR_ANALYSIS.md
include/: lua.h
src/auxiliary/: lauxlib.cpp  lauxlib.h  linit.cpp
src/compiler/: funcstate.cpp  lcode.cpp  lcode.h  llex.cpp  llex.h  lopcodes.cpp  lopcodes.h  lparser.cpp  lparser.h  parselabels.cpp  parser.cpp  parseutils.cpp
src/core/: lapi.cpp  lapi.h  ldebug.cpp  ldebug.h  ldo.cpp  ldo.h  lstack.cpp  lstack.h  lstate.cpp  lstate.h  ltm.cpp  ltm.h
src/interpreter/: lua.cpp
src/libraries/: lbaselib.cpp  lcorolib.cpp  ldblib.cpp  liolib.cpp  lmathlib.cpp  loadlib.cpp  loslib.cpp  lstrlib.cpp  ltablib.cpp  lutf8lib.cpp
src/memory/: LuaVector.h  lgc.cpp  lgc.h  llimits.h  lmem.cpp  lmem.h  luaallocator.h
src/memory/gc/: gc_barrier.cpp  gc_barrier.h  gc_collector.cpp  gc_collector.h  gc_core.cpp  gc_core.h  gc_finalizer.cpp  gc_finalizer.h  gc_marking.cpp  gc_marking.h  gc_sweeping.cpp  gc_sweeping.h  gc_weak.cpp  gc_weak.h
src/objects/: lctype.cpp  lctype.h  lfunc.cpp  lfunc.h  lobject.cpp  lobject.h  lobject_core.h  lproto.h  lstring.cpp  lstring.h  ltable.cpp  ltable.h  ltvalue.h
src/serialization/: ldump.cpp  lundump.cpp  lundump.h  lzio.cpp  lzio.h
src/testing/: ltests.cpp  ltests.h
src/vm/: ljumptab.h  lopnames.h  lvirtualmachine.cpp  lvirtualmachine.h  lvm.cpp  lvm.h  lvm_arithmetic.cpp  lvm_comparison.cpp  lvm_conversion.cpp  lvm_loops.cpp  lvm_string.cpp  lvm_table.cpp
testes/: .gitignore  bench_compare.sh  files.lua  test_newindex.lua
